fix: fix dpad image stretch and letter centering

--- a/button/button.css
+++ b/button/button.css
@@ -64,9 +64,9 @@
 }
 
 .button-text {
-    width: 100%;
+    left: 50%;
     top: 50%;
-    margin-top: -0.5em;
+    transform: translate(-50%, -50%);
     position: absolute;
     text-align: center;
     color: white;
